# apache-airflow-providers-pysparkonk8s

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
airflow/providers/pysparkonk8s/: __init__.py  get_provider_info.py
airflow/providers/pysparkonk8s/config/: __init__.py  config.py
airflow/providers/pysparkonk8s/decorators/: __init__.py  pyspark.py
airflow/providers/pysparkonk8s/operators/: __init__.py  pyspark.py
airflow/providers/pysparkonk8s/resources/: __init__.py  cpu.py  memory.py
airflow/providers/pysparkonk8s/utils/: __init__.py  utils.py
chart/: Chart.yaml  values.yaml
chart/templates/: role.yaml  rolebinding.yaml
docker/: Dockerfile  README.md  requirements.txt
docs/: README.md  index.yaml  pysparkonk8s-addon-1.0.0.tgz
examples/: README.md  dags-volume.yaml
examples/dags/: example_dag_1.py  example_dag_2.py  example_dag_3.py  example_dags.py
tests/providers/pysparkonk8s/: conftest.py
tests/providers/pysparkonk8s/config/: test_config.py
tests/providers/pysparkonk8s/decorators/: test_pyspark.py
tests/providers/pysparkonk8s/operators/: test_pyspark.py
tests/providers/pysparkonk8s/resources/: test_cpu.py  test_memory.py
tests/providers/pysparkonk8s/utils/: test_utils.py
